--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body> 
     <div class="grid_index">
         <header class="header_bootstrap">
-            <img class="img_logo" src="../images/logo blanco.png" alt="logo">
+            <img class="img_logo" src="./images/logo blanco.png" alt="logo">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
