--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="tattoo, tinta, agujas, supply, store, tienda, fuente, tatuajes, stencil">
+    <meta property="og:type" content="Web site">
+    <meta name="description" content="Suplementamos a artistas profesionales con los insumos y piercings de mejor calidad, trabajamos con las marcas mas confiables del mercado y nos aseguramos que tengas una buena atencion">
+    <meta property="og:title" content="Kexxy's Tattoo Supply">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="">
+    <link rel="shortcut icon" href="./images/favicon-16x16.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>Kexxy's tattoo studio</title>
+    <title>Kexxy's Tattoo Supply</title>
 </head>
 
 
@@ -58,37 +66,36 @@
             <h2 class="subtitulo">Somos un estudio de tatuajes y modificaciones corporales independiente.</h2>
             <div>
                 <section class="hero">
-                    <div class="texto_main">
-                        <p> Estamos ubicados en Mendoza, Argentina.</p>
-                        <p>Realizamos todo tipo de trabajos, desde realismo, full color, new y old school, black and grey y blackwork.</p>
-                        <p>Trabajamos con productos esterilizados y de uso profesional.</p>
-                    </div>
+                        <p> Estamos ubicados en Mendoza, Argentina.
+                        Realizamos todo tipo de trabajos, desde realismo, full color, new y old school, black and grey y blackwork.
+                        Trabajamos con productos esterilizados y de uso profesional.</p>
+                        <a href="https://goo.gl/maps/ZMe72PV2pqrzaTN7A">Ubicación</a>
                     <div class="map_div">
-                        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.9964928595998!2d-69.150201370742!3d-33.371432278813415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x828e957a41436ece!2zMzPCsDIyJzE3LjIiUyA2OcKwMDgnNTguOCJX!5e0!3m2!1ses!2sar!4v1672784283322!5m2!1ses!2sar" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.9964928595998!2d-69.150201370742!3d-33.371432278813415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x828e957a41436ece!2zMzPCsDIyJzE3LjIiUyA2OcKwMDgnNTguOCJX!5e0!3m2!1ses!2sar!4v1672784283322!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </section>
 
             <div class="productos">   
                 <section>
-                    <h2 class="productos__subtitulo">Productos destacados</h2>
+                    <h2 class="subtitulo">Productos destacados</h2>
                     <div class="productos_contenedor">
                             <div>
-                        <img src="./images/cartuchos.jpg" alt="">
+                        <img src="./images/cartuchos.jpg" alt="cartuchos ez filter x 20u">
                         <h3>Cartuchos EZ Filter x 20u</h3>
                         <a href="">comprar</a>
                             </div>
                             <div>
-                        <img src="./images/guantes_nitrilo.jpg" alt="">
+                        <img src="./images/guantes_nitrilo.jpg" alt="guantes nitrilo x 100u">
                         <h3>Guantes Nitrilo x 100u</h3>
                         <a href="">comprar</a>
                             </div>
                             <div>
-                        <img src="./images/clipcord.png" alt="">
+                        <img src="./images/clipcord.png" alt="cable clipcord 2mts">
                         <h3>Clipcord rca 2 metros</h3>
                         <a href="">comprar</a>
                             </div>
                             <div>
-                        <img src="./images/dynamic-8-oz-black.jpg" alt="">
+                        <img src="./images/dynamic-8-oz-black.jpg" alt="tinta dynamic black">
                         <h3>Tinta Dynamic black 8oz</h3>
                         <a href="">comprar</a>
                             </div>
