--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Contacto</title>
 </head>
 
 <body>
-    <header class="header_bootstrap">
+    <div>
+        <header class="header_bootstrap">
         <img class="img_logo" src="../images/logo blanco.png" alt="logo">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             
@@ -47,6 +48,7 @@
                 </div>
             </div>
         </nav>
+    </div>
     </header>
 
 
