--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,7 +55,11 @@
             <p class="texto_cuidados">Somos un estudio de tatuajes de un pueblo pequeño ubicado entre las montañas del Valle de Uco. Fundado por 2 amigos que comparten una misma pasion por las modificaciones corporales y por el mundo del tatuaje.</p>
             <p class="texto_cuidados">Buscamos tu comodidad, bienestar y queremos plasmar nuestro arte en tu piel. Contamos con productos de la mejor calidad, elementos quirurjicos descartables y tenemos un area de trabajo siempre limpia y desinfectada.</p>
             <h2 class="subtitulo">Staff</h2>
-            <p class="texto_cuidados">Nuestro personal esta compuesto de 4 personas</p>
+            <p class="texto_cuidados">Nuestro personal esta compuesto de 4 personas:</p>
+            <p class="texto_cuidados">Santiago: Un perforador y tatuador a tiempo medio con preferencia en el estilo Tradicional del tatuaje.</p>
+            <p class="texto_cuidados">Abigail: Perforadora a tiempo completo y tatuadora en practica con preferencia en trabajos a color.</p>
+            <p class="texto_cuidados">Enzo: Tatuador a tiempo completo con preferencia en estilo Blackwork.</p>
+            <p class="texto_cuidados">Agustin: Barbero a tiempo completo.</p>
         </main>
     
     
