--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,23 +54,31 @@
 
     <main class="main_contacto">
         <h1 class="animate__animated animate__backInRight">Contacto</h1>
-        <section>
+        <section class="casillas">
             <form action="" method="" enctype="">
                 <div>
-                    <Label for="Nombre">Nombre</Label>
-                    <input type="text" id="Nombre" </div>
+                    <Label for="Nombre">Nombre:</Label>
+                    <input type="text" id="Nombre"
+                </div>
+                <div>
+                    <label for="contrasena">Contraseña:</label>
+                    <input type="password" id="contrasena" 
+                </div>
                     <div>
-                        <label for="contrasena">Contrasena</label>
-                        <input type="text" id="contrasena" </div>
-                        <div>
-                            <label for="Numero de contacto">Numero</label>
-                            <input type="tel" id="numero" </div>
-                            <div>
-                                <label for="Correo">Correo</label>
-                                <input type="text" id="correo" </div>
-                                <div></div>
-                                <div></div>
-
+                        <label for="Numero de contacto">Número:</label>
+                        <input type="tel" id="numero" 
+                    </div>
+                    <div>
+                        <label for="Correo">Correo:</label>
+                        <input type="email" id="correo" 
+                    </div>
+                    <div>
+                        <label for="Mensaje">Mensaje:</label>
+                        <input class="casilla_texto" type="text" id="mensaje">
+                    </div>
+        <section>
+            <button class="boton">Enviar</button>
+        </section>
             </form>
         </section>
     </main>
