--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta property="og:type" content="Web site">
     <meta name="description" content="Suplementamos a artistas profesionales con los insumos y piercings de mejor calidad, trabajamos con las marcas mas confiables del mercado y nos aseguramos que tengas una buena atencion">
     <meta property="og:title" content="Kexxy's Tattoo Supply">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://kexxystattoo.netlify.app/">
     <meta property="og:image" content="">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Suplementamos a artistas profesionales con los insumos y piercings de mejor calidad, trabajamos con las marcas mas confiables del mercado y nos aseguramos que tengas una buena atencion">
     <link rel="shortcut icon" href="./images/favicon-16x16.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
