--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>Nosotros</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="tattoo, tinta, agujas, supply, store, tienda, fuente, tatuajes, stencil">
+        <meta property="og:type" content="Web site">
+        <meta name="description" content="Suplementamos a artistas profesionales con los insumos y piercings de mejor calidad, trabajamos con las marcas mas confiables del mercado y nos aseguramos que tengas una buena atencion">
+        <meta property="og:title" content="Kexxy's Tattoo Supply">
+        <meta property="og:url" content="https://kexxystattoo.netlify.app/pages/nosotros.html">
+        <meta property="og:image" content="">
+        <meta property="og:description" content="Suplementamos a artistas profesionales con los insumos y piercings de mejor calidad, trabajamos con las marcas mas confiables del mercado y nos aseguramos que tengas una buena atencion">
+        <link rel="shortcut icon" href="./images/favicon-16x16.png" type="image/x-icon">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/estilos.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <title>Nosotros</title>
+    </head>
     
 <body>
     <div>
