--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,7 +11,7 @@
         <meta property="og:url" content="https://kexxystattoo.netlify.app/pages/nosotros.html">
         <meta property="og:image" content="">
         <meta property="og:description" content="Suplementamos a artistas profesionales con los insumos y piercings de mejor calidad, trabajamos con las marcas mas confiables del mercado y nos aseguramos que tengas una buena atencion">
-        <link rel="shortcut icon" href="./images/favicon-16x16.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../images/favicon-16x16.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
